# Midnight-Warrens

./: CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.cpp
client_sdl/: CMakeLists.txt
client_sdl/src/: main.cpp
db/: schema.sql
game_common/include/: protocol.hpp
game_common/include/net/: messages.hpp
mwfw/: CMakeLists.txt
mwfw/include/: MWFW.h
mwfw/src/: MWFW.cpp
server/: CMakeLists.txt
server/src/: main.cpp
